sumo/tests/duarouter/errors/unknown_measure/routes.duarouter
<?xml version="1.0"?>

<!-- generated on 12/18/12 09:21:54 by SUMO duarouter Version dev-SVN-r13169
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.sf.net/xsd/duarouterConfiguration.xsd">

    <input>
        <net-file value="input_net.net.xml"/>
        <weight-files value="input_weights.dump.xml"/>
        <weight-attribute value="blub"/>
        <trip-files value="input_trips.trips.xml"/>
    </input>

    <output>
        <output-file value="routes.rou.xml"/>
    </output>

    <report>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.sf.net/xsd/routes_file.xsd"/>
